<resources>
    <string name="app_name">Smart Reminder</string>

    <string name="hello_blank_fragment">New features are coming soon !</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <string name="task">Task :</string>
    <string name="enter_to_do_here">Enter TO_DO Here</string>
    <string name="location_name">Location Name :</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="reminder_radius_m">Reminder radius ( m ) :</string>
    <string name="enter_radius_20_10000">Enter radius : 20 ~ 10000</string>
    <string name="pick_reminder_location">Pick reminder location</string>
    <string name="set_reminder_data">Set reminder Data</string>
    <string name="set_reminder_time">Set reminder Time</string>
    <string name="finished_time_reminder">Finished Time Reminder</string>
    <string name="finished_location_reminder">Finished Location Reminder</string>

    <string name="men_done">Finished Tasks</string>
    <string name="men_settings">Setting</string>
    <string name="menu_remove_ads">Remove Ad</string>
    <string name="menu_feedback">Feedback</string>
    <string name="men_about">About</string>
    <string name="menu_delete_all_time_reminder">Delete all time Reminder</string>
    <string name="menu_delete_all_location_reminder">Delete all location Reminder</string>
    <string name="menu_save">save</string>

    <string name="toolbar_title_new_task">New Task</string>
    <string name="toolbar_title_edit_task">Edit Task</string>
    <string name="toolbar_title_smart_reminder">Smart Reminder</string>

    <string name="notification_task_finish">Task Finish</string>
    <string name="notification_postphone_15_min">PostPone 15 min</string>

    <string name="toast_task_finished">Task finished</string>
    <string name="toast_task_forward_to_undo">Task forward to undo</string>
    <string name="toast_reminder_saved">Reminder Saved</string>
    <string name="toast_please_add_a_task">Please add a task</string>
    <string name="toast_reminder_delete">Reminder deleted</string>
    <string name="toast_no_place_picked">No place picked</string>
    <string name="toast_pleas_add_place_name">Please add a place name</string>
    <string name="toast_please_pick_a_place">Please pick a place</string>
    <string name="toast_please_enter_radius">Please enter a radius</string>
    <string name="toast_please_enter_a_valid_radius">Please enter a valid radius</string>
    <string name="toast_feedback">Please enter your feedback</string>

    <string name="description_add_new_reminder_task">add new reminder task</string>
    <string name="description_add_task_using_voice_input">add task using voice input</string>
    <string name="description_application_navigation">application navigation</string>
    <string name="description_clean_selected_date">clean selected date</string>
    <string name="description_clean_selected_time">clean selected time</string>
    <string name="description_delete_task">delete task</string>
    <string name="description_make_task_as_done">make task as done</string>

    <string name="http_www_google_com_policies_privacy">http://www.google.com/policies/privacy</string>
    <string name="widget_title">Reminders</string>
    <string name="feedback_question">Find any bug or have suggestions ?    Please, let me know, and I will make the best to improve this App.</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_email" translatable="false">lixw1021@gmail.com</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="by_xianwei">by xianwei</string>
    <string name="remove_ad_text">This will link to Paid Version in google play store</string>
    <string name="location_notification_channel_name">Location Notification</string>
    <string name="time_notification_channel_nbame">Time Notification</string>

</resources>
