<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/feedback_view_margin"
            android:text="@string/feedback_question"/>

        <EditText
            android:layout_margin="@dimen/feedback_view_margin"
            android:id="@+id/et_feedback"
            android:hint="@string/enter_your_feedback_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/feedback_view_margin"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/send_feedback" />

    </LinearLayout>
</ScrollView>